--- a/fireshieldsec_admin_v1/package.json
+++ b/fireshieldsec_admin_v1/package.json
@@ -9,8 +9,8 @@
     "@chakra-ui/portal": "^2.0.15",
     "@chakra-ui/system": "^2.3.5",
     "@chakra-ui/tooltip": "^2.2.6",
-    "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@headlessui/react": "^2.2.0",
     "@tanstack/react-table": "^8.7.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
